--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
      <body>
 	<header>Шапка</header>
 	<main>Основная часть</main>
-	<footer>Шапка</footer>
+	<footer>Подвал</footer>
      </body>
 </html>
