--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="index.css"/>
     <body>
         <header>
             <a href="#shedule">Расписание</a> <a href="#lessons">О занятиях</a> <a href="#photos">Фотографии</a>
