--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <link rel="stylesheet" href="index.css"/>
+    <head>
+        <link rel="stylesheet" href="index.css"/>
+        <title>Клуб верховой езды</title>
+    </head>
     <body>
         <header>
             <a href="#shedule">Расписание</a> <a href="#lessons">О занятиях</a> <a href="#photos">Фотографии</a>
